// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for delegate 1`] = `
{
  "metrics": Map {
    "DelegateFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "ProgramNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "MyDelegate",
      "toNamespace": "DelegateNamespace.MyDelegate",
      "toSource": "DelegateFile.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for enums 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 2,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromSource": "Main.cs",
      "toClassName": "EnumClass",
      "toNamespace": "NamespaceEnumA.EnumClass",
      "toSource": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromSource": "Main.cs",
      "toClassName": "DaysOfWeekB",
      "toNamespace": "NamespaceEnumB.DaysOfWeekB",
      "toSource": "ClassB.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromSource": "Main.cs",
      "toClassName": "DaysOfWeek",
      "toNamespace": "NamespaceEnumA.EnumClass.DaysOfWeek",
      "toSource": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for extended class 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromSource": "Main.cs",
      "toClassName": "ClassA",
      "toNamespace": "NamespaceA.ClassA",
      "toSource": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassA",
      "fromNamespace": "NamespaceA.ClassA",
      "fromSource": "ClassA.cs",
      "toClassName": "ClassB",
      "toNamespace": "NamespaceB.ClassB",
      "toSource": "ClassB.cs",
      "usageType": "extends",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for generics 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 2,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassC.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassD.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "GenericClass.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "Program.cs" => {
      "coupling_between_objects": 4,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 4,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "ClassA",
      "toNamespace": "ClassANamespace.ClassA",
      "toSource": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassD",
      "fromNamespace": "ClassDNamespace.ClassD",
      "fromSource": "ClassD.cs",
      "toClassName": "ClassB",
      "toNamespace": "ClassBNamespace.ClassB",
      "toSource": "ClassB.cs",
      "usageType": "extends",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "ClassC",
      "toNamespace": "ClassCNamespace.ClassC",
      "toSource": "ClassC.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "ClassD",
      "toNamespace": "ClassDNamespace.ClassD",
      "toSource": "ClassD.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "GenericClass",
      "toNamespace": "GenericClassNamespace.GenericClass",
      "toSource": "GenericClass.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "GenericClass",
      "fromNamespace": "GenericClassNamespace.GenericClass",
      "fromSource": "GenericClass.cs",
      "toClassName": "ClassB",
      "toNamespace": "ClassBNamespace.ClassB",
      "toSource": "ClassB.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for global classes without namespace 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "NoNamespaceDefinition",
      "fromNamespace": "NoNamespaceDefinition",
      "fromSource": "Program.cs",
      "toClassName": "ClassA",
      "toNamespace": "ClassA",
      "toSource": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for global namespaces without import 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "NoImport",
      "fromNamespace": "NoImport",
      "fromSource": "Program.cs",
      "toClassName": "ClassA",
      "toNamespace": "NamespaceA.ClassA",
      "toSource": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for interface 1`] = `
{
  "metrics": Map {
    "Programm.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
    "TheInterfaceFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromSource": "Programm.cs",
      "toClassName": "TheInterface",
      "toNamespace": "theInterfaceNamespace.TheInterface",
      "toSource": "TheInterfaceFile.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for multiple method calls 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "MultipleMethodCalls",
      "fromNamespace": "mainNamespace.MultipleMethodCalls",
      "fromSource": "Program.cs",
      "toClassName": "ClassA",
      "toNamespace": "NamespaceA.ClassA",
      "toSource": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for multiple types in a file 1`] = `
{
  "metrics": Map {
    "ImplementedClassFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Programm.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromSource": "Programm.cs",
      "toClassName": "ImplementClass",
      "toNamespace": "implementClassNamespace.ImplementClass",
      "toSource": "ImplementedClassFile.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "DoThing",
      "fromNamespace": "mainNamespace.DoThing",
      "fromSource": "Programm.cs",
      "toClassName": "ImplementClass",
      "toNamespace": "implementClassNamespace.ImplementClass",
      "toSource": "ImplementedClassFile.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassAsReturnType",
      "fromNamespace": "mainNamespace.ClassAsReturnType",
      "fromSource": "Programm.cs",
      "toClassName": "ImplementClass",
      "toNamespace": "implementClassNamespace.ImplementClass",
      "toSource": "ImplementedClassFile.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for nested folder structure 1`] = `
{
  "metrics": Map {
    "BlubController.cs" => {
      "coupling_between_objects": 8,
      "incoming_dependencies": 7,
      "instability": 0.125,
      "outgoing_dependencies": 1,
    },
    "Library\\FunctionCalls.cs" => {
      "coupling_between_objects": 9,
      "incoming_dependencies": 5,
      "instability": 0.4444444444444444,
      "outgoing_dependencies": 4,
    },
    "Library\\IAnotherParameterTypes.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Library\\IParameterTypes.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 2,
      "instability": 0.3333333333333333,
      "outgoing_dependencies": 1,
    },
    "Library\\MyCustomArgumentNullException.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Library\\ObjectCreations.cs" => {
      "coupling_between_objects": 8,
      "incoming_dependencies": 1,
      "instability": 0.875,
      "outgoing_dependencies": 7,
    },
    "Library\\ParameterTypes.cs" => {
      "coupling_between_objects": 5,
      "incoming_dependencies": 3,
      "instability": 0.4,
      "outgoing_dependencies": 2,
    },
    "Library\\ParameterTypesSpecialized.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
  },
  "relationships": [
    {
      "fromClassName": "ParameterTypes",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "fromSource": "Library\\ParameterTypes.cs",
      "toClassName": "FunctionCalls",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toSource": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerOne1",
      "fromNamespace": "App.CouplingExamplesOne.BlubControllerOne1",
      "fromSource": "BlubController.cs",
      "toClassName": "FunctionCalls",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toSource": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerOne2",
      "fromNamespace": "App.CouplingExamplesOne.BlubControllerOne2",
      "fromSource": "BlubController.cs",
      "toClassName": "FunctionCalls",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toSource": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerTwo1",
      "fromNamespace": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "fromSource": "BlubController.cs",
      "toClassName": "FunctionCalls",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toSource": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerTwo2",
      "fromNamespace": "App.CouplingExamplesTwo.BlubControllerTwo2",
      "fromSource": "BlubController.cs",
      "toClassName": "FunctionCalls",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toSource": "Library\\FunctionCalls.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "IParameterTypes",
      "fromNamespace": "App.CouplingExamples.Library.IParameterTypes",
      "fromSource": "Library\\IParameterTypes.cs",
      "toClassName": "IAnotherParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.IAnotherParameterTypes",
      "toSource": "Library\\IAnotherParameterTypes.cs",
      "usageType": "implements",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "IParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.IParameterTypes",
      "toSource": "Library\\IParameterTypes.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypesSpecialized",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypesSpecialized",
      "fromSource": "Library\\ParameterTypesSpecialized.cs",
      "toClassName": "IParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.IParameterTypes",
      "toSource": "Library\\IParameterTypes.cs",
      "usageType": "implements",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "MyCustomArgumentNullException",
      "toNamespace": "App.CouplingExamples.Library.MyCustomArgumentNullException",
      "toSource": "Library\\MyCustomArgumentNullException.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypes",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "fromSource": "Library\\ParameterTypes.cs",
      "toClassName": "ObjectCreations",
      "toNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "toSource": "Library\\ObjectCreations.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "fromSource": "Library\\FunctionCalls.cs",
      "toClassName": "ParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "toSource": "Library\\ParameterTypes.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "ParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "toSource": "Library\\ParameterTypes.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypesSpecialized",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypesSpecialized",
      "fromSource": "Library\\ParameterTypesSpecialized.cs",
      "toClassName": "ParameterTypes",
      "toNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "toSource": "Library\\ParameterTypes.cs",
      "usageType": "extends",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "fromSource": "Library\\FunctionCalls.cs",
      "toClassName": "BlubControllerOne1",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne1",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerOne1",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne1",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "fromSource": "Library\\FunctionCalls.cs",
      "toClassName": "BlubControllerOne2",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne2",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerOne2",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne2",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "fromSource": "Library\\FunctionCalls.cs",
      "toClassName": "BlubControllerTwo1",
      "toNamespace": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerTwo1",
      "toNamespace": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "fromSource": "Library\\ObjectCreations.cs",
      "toClassName": "BlubControllerTwo2",
      "toNamespace": "App.CouplingExamplesTwo.BlubControllerTwo2",
      "toSource": "BlubController.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static class using 1`] = `
{
  "metrics": Map {
    "ClassA_And_B.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromSource": "Main.cs",
      "toClassName": "ClassB",
      "toNamespace": "StaticUsedNamespace.ClassB",
      "toSource": "ClassA_And_B.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static method call in for loop 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 2,
      "instability": 0.3333333333333333,
      "outgoing_dependencies": 1,
    },
    "ClassC.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 2,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 3,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "ProgramNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "ClassA",
      "toNamespace": "ClassANamespace.ClassA",
      "toSource": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassA",
      "fromNamespace": "ClassANamespace.ClassA",
      "fromSource": "ClassA.cs",
      "toClassName": "ClassB",
      "toNamespace": "ClassBNamespace.ClassB",
      "toSource": "ClassB.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "ProgramNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "ClassB",
      "toNamespace": "ClassBNamespace.ClassB",
      "toSource": "ClassB.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassB",
      "fromNamespace": "ClassBNamespace.ClassB",
      "fromSource": "ClassB.cs",
      "toClassName": "ClassC",
      "toNamespace": "ClassCNamespace.ClassC",
      "toSource": "ClassC.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "ProgramNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "ClassC",
      "toNamespace": "ClassCNamespace.ClassC",
      "toSource": "ClassC.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static system.console.writeline using 1`] = `
{
  "metrics": Map {
    "System.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromSource": "Main.cs",
      "toClassName": "Console",
      "toNamespace": "System.Console",
      "toSource": "System.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for struct 1`] = `
{
  "metrics": Map {
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
    "StructFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "CsharpStruct.Program",
      "fromSource": "Program.cs",
      "toClassName": "Employee",
      "toNamespace": "StructNamespace.Employee",
      "toSource": "StructFile.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for two namespace containing the same class name 1`] = `
{
  "metrics": Map {
    "Programm.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
    "TwoNamespaceWithSameClassName.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 2,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromSource": "Programm.cs",
      "toClassName": "SameClass",
      "toNamespace": "NumberOne.SameClass",
      "toSource": "TwoNamespaceWithSameClassName.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromSource": "Programm.cs",
      "toClassName": "SameClass",
      "toNamespace": "NumberTwo.SameClass",
      "toSource": "TwoNamespaceWithSameClassName.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for usage of class in the same file 1`] = `
{
  "metrics": Map {
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "DoThing",
      "toNamespace": "mainNamespace.DoThing",
      "toSource": "Program.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for usage of delegates in class in the same file 1`] = `
{
  "metrics": Map {
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Mainy",
      "fromNamespace": "DelegateNamespace.Mainy",
      "fromSource": "Program.cs",
      "toClassName": "MyDelegate",
      "toNamespace": "DelegateNamespace.MyDelegate",
      "toSource": "Program.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for usage of interface in class method in the same file 1`] = `
{
  "metrics": Map {
    "ClassToInterface.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "OtherProgram",
      "fromNamespace": "ClassToInterfaceNamespace.OtherProgram",
      "fromSource": "ClassToInterface.cs",
      "toClassName": "MyInterface",
      "toNamespace": "ClassToInterfaceNamespace.MyInterface",
      "toSource": "ClassToInterface.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "FirstInterface",
      "fromNamespace": "mainNamespace.FirstInterface",
      "fromSource": "Program.cs",
      "toClassName": "SecondInterface",
      "toNamespace": "mainNamespace.SecondInterface",
      "toSource": "Program.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > when the code contains extension method 1`] = `
{
  "metrics": Map {
  "ExtensionMethod.cs" => {
        "coupling_between_objects": 2,
        "incoming_dependencies": 1,
        "instability": 0.5,
        "outgoing_dependencies": 1,
      },
  "Program.cs" => {
          "coupling_between_objects": 1,
          "incoming_dependencies": 0,
          "instability": 1,
          "outgoing_dependencies": 1,
        },
  "Enum.cs" => {
            "coupling_between_objects": 1,
            "incoming_dependencies": 1,
            "instability": 0,
            "outgoing_dependencies": 0,
          },
  },
  "relationships": [
  {
        "fromClassName": "ExtensionMethods2",
        "fromNamespace": "mainNamespace.ExtensionMethods2",
        "fromSource": "Program.cs",
        "toClassName": "MyExtensions",
        "toNamespace": "ExtensionMethods.MyExtensions",
        "toSource": "ExtensionMethod.cs",
        "usageType": "usage",
      },
  {
          "fromClassName": "MyExtensions",
          "fromNamespace": "ExtensionMethods.MyExtensions",
          "fromSource": "ExtensionMethod.cs",
          "toClassName": "EnumType",
          "toNamespace": "EnumNamespace.EnumType",
          "toSource": "Enum.cs",
          "usageType": "usage",
        },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > when the code contains type conversion 1`] = `
{
  "metrics": Map {
    "ClassAFile.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "ClassBFile.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 2,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "ProgramNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "ClassA",
      "toNamespace": "classANamespace.ClassA",
      "toSource": "ClassAFile.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "ProgramNamespace.Program",
      "fromSource": "Program.cs",
      "toClassName": "ClassB",
      "toNamespace": "classBNamespace.ClassB",
      "toSource": "ClassBFile.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassA",
      "fromNamespace": "classANamespace.ClassA",
      "fromSource": "ClassAFile.cs",
      "toClassName": "ClassB",
      "toNamespace": "classBNamespace.ClassB",
      "toSource": "ClassBFile.cs",
      "usageType": "extends",
    },
  ],
}
`;
